cmake_minimum_required (VERSION 3.8)
project(project_CubeCamera)
add_subdirectory(cwmods)
add_subdirectory(imgui-1.73)
add_library (CubeCamera SHARED "main.cpp" "GuiWindow.cpp" "GuiWindow.h" "CamMod.cpp" "CamMod.h")
target_link_libraries (CubeCamera LINK_PUBLIC CWSDK)
target_link_libraries (CubeCamera LINK_PUBLIC IMGUI)